add Rupper WRF model

--- a/HiMAT_admin.ipynb
+++ b/HiMAT_admin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,11 +24,11 @@
       "text/plain": [
        "array(['FirstName', 'LastName', 'email', 'PI_Team', 'Position',\n",
        "       'Institution', 'InstitutionType', 'InviteMeeting_1',\n",
-       "       'AttendingTour_1', 'Citizenship', 'VisaStatus', 'Unnamed: 11',\n",
-       "       'markdown'], dtype=object)"
+       "       'AttendingTour_1', 'AttendingDinner_1', 'Citizenship', 'VisaStatus',\n",
+       "       'Unnamed: 12', 'markdown'], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -213,21 +213,28 @@
     {
      "data": {
       "text/plain": [
-       "array(['arendta@uw.edu', 'phouser@gmu.edu', 'sarah.kapnick@noaa.gov',\n",
-       "       'jeffreyskargel@hotmail.com', 'dalia.b.kirschbaum@nasa.gov',\n",
-       "       'sujay.v.kumar@nasa.gov', 'kmcdonald2@ccny.cuny.edu',\n",
-       "       'batuhan.osmanoglu@nasa.gov', 'thomas.painter@jpl.nasa.gov',\n",
-       "       'summer.rupper@geog.utah.edu', 'si-chee.tsay@nasa.gov',\n",
-       "       'margulis@seas.ucla.edu'], dtype=object)"
+       "1         Arendt\n",
+       "11        Houser\n",
+       "13       Kapnick\n",
+       "14        Kargel\n",
+       "15    Kirschbaum\n",
+       "17         Kumar\n",
+       "23      Margulis\n",
+       "25      McDonald\n",
+       "28     Osmanoglu\n",
+       "29       Painter\n",
+       "36        Rupper\n",
+       "44          Tsay\n",
+       "Name: LastName, dtype: object"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.query('(LastName == PI_Team)').email.values"
+    "df.query('(LastName == PI_Team)').LastName"
    ]
   },
   {
